# solar_irradiation_sensoring

./: .gitignore  CMakeLists.txt  Makefile  README.md  adc_reader.h  diario.md  mqtt.c  partitions.csv  platformio.ini  sdkconfig  sincTime.c
main/: CMakeLists.txt  Kconfig.projbuild  adc_reader.c  adc_reader.h  app_prov.c  app_prov.h  app_prov_handlers.c  component.mk  energy-prof.h  fsm.c  fsm.h  main.c  mqtt.c  mqtt.h  ota.c  ota.h  redireccionLogs.c  si7021.c  si7021.h  sincTime.c  wpa2_enterprise.c
src/: Kconfig.projbuild  adc_reader.c  adc_reader.h  app_prov.c  app_prov_handlers.c  ble.c  ble.h  fsm.c  fsm.h  main.c  mqtt.c  mqtt.h  provisionamiento.c  provisioning.c  redireccionLogs.c  rest_server.c  rest_server.h  rest_server_main.c  sensors_readings.h  sgp30.c  sgp30.h  si7021.c  si7021.h  sincTime.c  wpa2_ca_pem.c  wpa2_client_crt.c  wpa2_client_key.c  wpa2_enterprise.c  wpa2_enterprise.h
